objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>HealthCloudGA__CareGap</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HealthCloudGA__Healthcare</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Workplace Process</fullName>
        <description>Process for handling Workplace Cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>wkdw__HR</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved by Manager</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Manager Review</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Rejected by Manager</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>wkdw__HR Sensitive</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved by Manager</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Manager Review</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Rejected by Manager</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>wkdw__IT Process</fullName>
        <description>Process for logging Concierge IT cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>wkitsm__ITSC - Change Process</fullName>
        <description>Statuses identified for requesting, approving and promoting a change</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Change Implemented</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Denied</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Request for Change</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Submitted for Approval</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>wkitsm__ITSC - Incident Process</fullName>
        <description>Process that follows specific statuses to create, investigate and solve an incident</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>wkitsm__ITSC - Major Incident Process</fullName>
        <description>Process that follows specific statuses to create, investigate and solve a major incident</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>wkitsm__ITSC - Problem Process</fullName>
        <description>Process that follows specific statuses to create, investigate and solve a problem</description>
        <isActive>true</isActive>
        <values>
            <fullName>Analyzed</fullName>
        </values>
        <values>
            <fullName>Change Created</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Known Error</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Prioritized</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Workaround Documented</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>wkitsm__ITSC - Request Process</fullName>
        <description>Process that follows specific statuses to create, investigate and fulfilment of a request</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <description>Actual End Date of Completing a Change</description>
        <inlineHelpText>Provide Actual End Date</inlineHelpText>
        <label>Actual End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <description>Actual Start Date of Change Request</description>
        <inlineHelpText>Provide Actual Start Date</inlineHelpText>
        <label>Actual Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Anticipated_Work_Return_Date__c</fullName>
        <label>Anticipated Work Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Approval Status for a Change Request</description>
        <inlineHelpText>If Change Request is Rejected, please review Assessor Comments field for reason</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted to Manager</fullName>
                </value>
                <value>
                    <fullName>Approved by Manager</fullName>
                </value>
                <value>
                    <fullName>Rejected by Manager</fullName>
                </value>
                <value>
                    <fullName>Submitted to Legal</fullName>
                </value>
                <value>
                    <fullName>Approved by Legal</fullName>
                </value>
                <value>
                    <fullName>Rejected by Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Change Approval Status</description>
        <inlineHelpText>Change Approval Status</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Rejection_Reason__c</fullName>
        <description>Text for Change Assessor to explain the reason for rejection</description>
        <label>Change Rejection Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_Incident__c</fullName>
        <label>Date of Incident</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Day_Away_from_Work__c</fullName>
        <label>First Day Away from Work</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DueDate__c</fullName>
        <description>Date by when this care gap should be closed.</description>
        <inlineHelpText>Date by when this care gap should be closed.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FinancialValue__c</fullName>
        <description>Potential savings by closing this care gap.</description>
        <inlineHelpText>Potential savings by closing this care gap.</inlineHelpText>
        <label>Financial Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <description>Rank by which this care gap is sorted.</description>
        <inlineHelpText>Rank by which this care gap is sorted.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgencyMeasureID__c</fullName>
        <description>ID of the source agency&apos;s measure for this care gap.</description>
        <inlineHelpText>ID of the source agency&apos;s measure for this care gap.</inlineHelpText>
        <label>Source Agency Measure ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgencyMeasureVersion__c</fullName>
        <description>Version of the source agency&apos;s ID measure for this care gap.</description>
        <inlineHelpText>Version of the source agency&apos;s ID measure for this care gap.</inlineHelpText>
        <label>Source Agency Measure Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgency__c</fullName>
        <description>Agency that identified the care gap.</description>
        <inlineHelpText>Agency that identified the care gap.</inlineHelpText>
        <label>Source Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemID__c</fullName>
        <description>Record ID in the source system.</description>
        <externalId>true</externalId>
        <inlineHelpText>Record ID in the source system.</inlineHelpText>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated.</description>
        <inlineHelpText>When last updated.</inlineHelpText>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <description>Name of the system where this care gap was identified.</description>
        <inlineHelpText>Name of the system where this care gap was identified.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOA_Documentation_Received_Date__c</fullName>
        <label>LOA Documentation Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOA_Documentation_Sent_Date__c</fullName>
        <label>LOA Documentation Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOA_Documents_Received_from_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOA Documents Received from Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOA_Documents_Sent_to_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOA Documents Sent to Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOA_Eligibility_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOA Eligibility Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOA_Reason__c</fullName>
        <label>LOA Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bereavement</fullName>
                </value>
                <value>
                    <fullName>Bonding / Adoption / Childbirth</fullName>
                </value>
                <value>
                    <fullName>Extended vacation</fullName>
                </value>
                <value>
                    <fullName>Family or personal leave</fullName>
                </value>
                <value>
                    <fullName>Long-term disability</fullName>
                </value>
                <value>
                    <fullName>Military leave</fullName>
                </value>
                <value>
                    <fullName>Ongoing education.</fullName>
                </value>
                <value>
                    <fullName>Sabbatical</fullName>
                </value>
                <value>
                    <fullName>Short-term disability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Letter_Created_Date__c</fullName>
        <label>Letter Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On Behalf Of</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Employee Relations - Complaint</fullName>
                </value>
                <value>
                    <fullName>Employee Relations - Disciplinary Action</fullName>
                </value>
                <value>
                    <fullName>Employee Relations - Wage Issues</fullName>
                </value>
                <value>
                    <fullName>Employee Relations - Workspace Safety</fullName>
                </value>
                <value>
                    <fullName>Tuition Reimbursement</fullName>
                </value>
                <value>
                    <fullName>HR Inquiry</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
                <value>
                    <fullName>HR Transaction - Place Employee on Leave of Absence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>demoRecommendations__c</fullName>
        <description>DO NOT CHANGE What: used in Case Classification</description>
        <label>demoRecommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkdw__TicketCategory__c</fullName>
        <description>The type of ticket. Available on the new ticket form when more than one category exists. 
        
        The API name values of this field must match the values of the names on the custom metadata record (Name__c on TicketCategoryDefinition__mdt).</description>
        <label>Ticket Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>HR - Employee Relations</fullName>
                </value>
                <value>
                    <fullName>HR - General</fullName>
                </value>
                <value>
                    <fullName>HR - Payroll</fullName>
                </value>
                <value>
                    <fullName>HR - Benefits</fullName>
                </value>
                <value>
                    <fullName>HR - Leave</fullName>
                </value>
                <value>
                    <fullName>HR - Onboarding</fullName>
                </value>
                <value>
                    <fullName>HR - Employee Performance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__BackoutTime__c</fullName>
        <description>The outage and effort to backout this change.</description>
        <inlineHelpText>The outage and effort to backout this change.</inlineHelpText>
        <label>Backout Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Less Than 1 Hour Outage with Minimal Reversal Time</fullName>
                </value>
                <value>
                    <fullName>More Than 1 Hour Outage with Significant Reversal Time</fullName>
                </value>
                <value>
                    <fullName>No Backout Option</fullName>
                </value>
                <value>
                    <fullName>No Outage and Less Than 1 Hour</fullName>
                    <default>true</default>
                    <label>No Outage and Less Than 1 Hour</label>
                </value>
                <value>
                    <fullName>No Outage and More Than 1 Hour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__Benefits__c</fullName>
        <label>Benefits</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__BusinessRisks__c</fullName>
        <label>Business Risks</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__CabNote__c</fullName>
        <label>CAB Note</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>wkitsm__ServiceProvider__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>wkitsm__Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__ChangeDescription__c</fullName>
        <label>Change Description</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__ChangeEffort__c</fullName>
        <label>Change Effort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Significant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__ChangeImpact__c</fullName>
        <label>Change Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__ChangeOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ChangeRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__ChangePlan__c</fullName>
        <label>Change Plan</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__ChangeType__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__DeploymentPlan__c</fullName>
        <description>Deployment plan</description>
        <label>Deployment Plan</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__Diagnostics__c</fullName>
        <label>Diagnostics</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__DueDate__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkitsm__EscalationReason__c</fullName>
        <description>Reason for escalation.</description>
        <label>Escalation Reason</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__ExpectedOutage__c</fullName>
        <description>The expected service outage resulting from this change.</description>
        <inlineHelpText>The expected service outage resulting from this change.</inlineHelpText>
        <label>Expected Outage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2 to 3 Hours</fullName>
                </value>
                <value>
                    <fullName>3 to 5 Hours</fullName>
                </value>
                <value>
                    <fullName>Less Than 2 Hours</fullName>
                </value>
                <value>
                    <fullName>More Than 5 Hours</fullName>
                </value>
                <value>
                    <fullName>No Outage</fullName>
                    <default>true</default>
                    <label>No Outage</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__FinancialRisk__c</fullName>
        <label>Financial Risk</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__ImpactDetails__c</fullName>
        <label>Impact Details</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Business Unit</fullName>
                </value>
                <value>
                    <fullName>Department</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                    <default>true</default>
                    <label>Individual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__KnownError__c</fullName>
        <label>Known Error</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__LevelOfTesting__c</fullName>
        <description>The level of testing completed for the submitted change.</description>
        <inlineHelpText>The level of testing completed for the submitted change.</inlineHelpText>
        <label>Level of Testing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Unit Test</fullName>
                </value>
                <value>
                    <fullName>Unit Test, QA, and UAT</fullName>
                    <default>true</default>
                    <label>Unit Test, QA, and UAT</label>
                </value>
                <value>
                    <fullName>Unit Test and QA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__MajorIncidentManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User which is a part of Major Incidents Manager group</description>
        <label>Major Incident Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__MajorIncident__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Major Incident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__ManagementAssessments__c</fullName>
        <label>Management Assessments</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__ManualPriority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually override the Priority</description>
        <inlineHelpText>Enable the option to select a value for the Priority field. When disabled, the Priority value is calculated based on the values of the Impact and Urgency fields.</inlineHelpText>
        <label>Manual priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__NumberOfTeams__c</fullName>
        <description>The number of teams needed to execute a change.</description>
        <inlineHelpText>The number of teams needed to execute a change.</inlineHelpText>
        <label>Number of Teams</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__OpenTaskCount__c</fullName>
        <label>Open Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__PlannedEndDateTime__c</fullName>
        <description>Change planned end date and time</description>
        <label>Planned End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkitsm__PlannedStartDateTime__c</fullName>
        <description>Change planned start date and time</description>
        <label>Planned Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkitsm__PreviousQueue__c</fullName>
        <label>Previous Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__PrimaryCI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Configuration Item</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Cases with this as Primary CI</relationshipLabel>
        <relationshipName>PrimaryCICases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__PriorExperience__c</fullName>
        <description>Previous experience with success of change.</description>
        <inlineHelpText>Previous experience with success of change.</inlineHelpText>
        <label>Prior Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No Experience</fullName>
                    <default>true</default>
                    <label>No Experience</label>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Successful After Issues</fullName>
                    <label>Successful with Issues</label>
                </value>
                <value>
                    <fullName>Unsuccessful After Issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__ProblemManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Problem Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProblemCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__ProblemSource__c</fullName>
        <label>Problem Source</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__ReportedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>ReportedCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__ReportedDateTime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Reported Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkitsm__ResolutionDetails__c</fullName>
        <label>Resolution Details</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__ResolutionType__c</fullName>
        <label>Resolution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User Error</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Resolution Found</fullName>
                </value>
                <value>
                    <fullName>Workaround Accepted</fullName>
                </value>
                <value>
                    <fullName>Workaround Declined</fullName>
                </value>
                <value>
                    <fullName>Information Shared</fullName>
                </value>
                <value>
                    <fullName>Known Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__Resources__c</fullName>
        <label>Resources</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__RiskDetails__c</fullName>
        <description>Risk Details</description>
        <label>Risk Details</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
</CustomObject>